--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,7 @@ url: "https://progress-athens.org" # the base hostname & protocol for your site,
 facebook_username: ProgressAthensFoundation
 
 # Build settings
-theme: minima
+# theme: minima
+
+plugins:
+  - jekyll-seo-tag
